Fix unreadable font color

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,11 +19,12 @@
 }
 body {
   margin: 0;
-  color: #fff;
+  padding: 0;
 }
 .header {
   background: #FF8D00;
   padding: 1em 0.5em;
+  color: #fff;
 }
 .header a {
   color: inherit;
